Module for adding and removing calendar tasks

--- a/package.json
+++ b/package.json
@@ -10,6 +10,13 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.12",
+    "@fullcalendar/core": "^6.1.14",
+    "@fullcalendar/daygrid": "^6.1.14",
+    "@fullcalendar/interaction": "^6.1.14",
+    "@fullcalendar/list": "^6.1.14",
+    "@fullcalendar/multimonth": "^6.1.14",
+    "@fullcalendar/react": "^6.1.14",
+    "@fullcalendar/timegrid": "^6.1.14",
     "@hookform/resolvers": "^3.6.0",
     "@prisma/client": "^5.16.1",
     "@radix-ui/react-dialog": "^1.1.1",
